force-app/main/default/objects/Apttus__LiteUserSummary__c/Apttus__LiteUserSummary__c.object-meta.xml
<CustomObject>
    <description>Holds lite users summary information</description>
    <label>Lite User Usage Summary</label>
    <nameField>
        <label>Lite User Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lite Users Usage Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>