force-app/main/default/objects/Apttus__LiteUserSummary__c/fields/Apttus__LastLoginCount__c.field-meta.xml
<CustomField>
    <fullName>Apttus__LastLoginCount__c</fullName>
    <description>Number of logins happened for the given period</description>
    <inlineHelpText>Number of logins for the given period</inlineHelpText>
    <label>Login Count for Given Period</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>