force-app/main/default/objects/Apttus__LiteUserSummary__c/fields/Apttus__Profile__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Profile__c</fullName>
    <description>Name of the lite profile</description>
    <inlineHelpText>Name of the lite profile</inlineHelpText>
    <label>Profile</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>