force-app/main/default/objects/Apttus__LiteUserSummary__c/fields/Apttus__TotalLoginTillDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TotalLoginTillDate__c</fullName>
    <description>Total login count from the time onwards user added into Lite profile</description>
    <inlineHelpText>Total user login count since inception</inlineHelpText>
    <label>Total login count Till Date</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>